--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,9 +1,13 @@
 ---
 back.png: back-c544041bea9b5b6496f4a8497c5854ac.png
+e-coding.png: e-coding-70e5901bfb9b06cce105498fc0b4688b.png
+fondo.jpg: fondo-ed7a540941efa6a38b6ef161ad499595.jpg
+fondo.png: fondo-cca2d973300127856788acef4f682294.png
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-ab3144065a860d198f1d7d9a4882640c.png
 grid.png: grid-8739557b87a010f5dd7e0538ce6fc709.png
+logo.png: logo-925b9407a49ac1af220eb235ef26dc7e.png
 office.png: office-21315d84e73dd5083c886dda4cf29ff8.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 application.js: application-05ad42519beef58909e94e4c5c7ce370.js
-application.css: application-8d4f9d4ae50cddbf2874ae2b56a4952c.css
+application.css: application-7df98f54e2e066a3f4990f214c8b0429.css
